updated test cases and service implementation