@@ -1,7 +1,6 @@
 package com.example.accepttermsserver.service.impl;
 
 import com.example.accepttermsserver.dto.AcceptTermsRequestDto;
-import com.example.accepttermsserver.dto.AcceptTermsResponseDto;
 import com.example.accepttermsserver.entity.AcceptTerms;
 import com.example.accepttermsserver.exception.BaseException;
 import com.example.accepttermsserver.repository.AcceptTermsRepository;
@@ -12,12 +11,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import java.util.Arrays;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class AcceptTermsServiceImplTest {
@@ -31,27 +29,25 @@ class AcceptTermsServiceImplTest {
     @DisplayName("Create AcceptTerms")
     @Test
     void Should_ReturnResponseOfNewAcceptTermsEntity_When_RequestAcceptTerms() {
-        AcceptTerms entity = AcceptTerms.builder()
-                .acceptTermsId(1L)
-                .termsId(1L)
-                .applicationId(1L)
-                .build();
         AcceptTermsRequestDto request = AcceptTermsRequestDto.builder()
-                .termsIds(List.of(1L))
+                .termsIds(Arrays.asList(1L))
                 .applicationId(1L)
                 .build();
 
-        when(acceptTermsRepository.save(any(AcceptTerms.class))).thenReturn(entity);
-        AcceptTermsResponseDto actual = acceptTermsService.create(request);
-        assertThat(actual).isNotNull();
-        assertThat(actual.getAcceptTermsId()).isSameAs(entity.getAcceptTermsId());
+        when(acceptTermsRepository.existsByApplicationIdAndTermsId(1L, 1L)).thenReturn(false);
+        when(acceptTermsRepository.save(any(AcceptTerms.class))).thenReturn(AcceptTerms.builder().build());
+
+        acceptTermsService.create(request);
+
+        verify(acceptTermsRepository, times(1)).save(any(AcceptTerms.class));
+        verify(acceptTermsRepository, times(1)).existsByApplicationIdAndTermsId(1L, 1L);
     }
 
     @DisplayName("Create AcceptTerms with empty termsIds")
     @Test
     void Should_ThrowException_When_RequestAcceptTermsWithEmptyTermsIds() {
         AcceptTermsRequestDto request = AcceptTermsRequestDto.builder()
-                .termsIds(List.of())
+                .termsIds(Arrays.asList())
                 .applicationId(1L)
                 .build();
 
@@ -62,11 +58,15 @@ class AcceptTermsServiceImplTest {
     @Test
     void Should_ThrowException_When_RequestAcceptTermsWithExistingTermsIds() {
         AcceptTermsRequestDto request = AcceptTermsRequestDto.builder()
-                .termsIds(List.of(1L))
+                .termsIds(Arrays.asList(1L))
                 .applicationId(1L)
                 .build();
         when(acceptTermsRepository.existsByApplicationIdAndTermsId(1L, 1L)).thenReturn(true);
+
         assertThrows(BaseException.class, () -> acceptTermsService.create(request));
     }
-
 }
+
+
+
+
